@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add support for OrderDescription, Payer, and InvoiceID fields in PaypalGateway [cody]
+#
 # * Add support for crediting to PayPal [cody, Haig]
 #
 # * Add discover to list of supported card types for Authorize.net
